tests/reference/tokens-indent3-0eaf3e6.stderr
tokenizer error: Expected an indented block.
 --> tests/tokens/errors/indent3.py:5:1
  |
5 |     pass
  | ^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
